Bug 454502: make dwarf use valueof instead of number constructor
This may improve both memory and cpu performance. (SLIGHTLY)

Change-Id: I05c06b017b9d8e4505a17e99cde6c024bca21dd4
Signed-off-by: Matthew Khouzam <matthew.khouzam@ericsson.com>